export const snapshot = {};

snapshot[`molt 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules

Options:

  -h, --help               - Show this help.                                            
  -v, --version            - Print version info.                                        
  --import-map   <file>    - Specify import map file                                    
  -w, --write              - Write changes to local files                               
  -c, --commit             - Commit changes to local git repository                     
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)
  --summary      <file>    - Write a summary of changes to file                         
  --report       <file>    - Write a report of changes to file                          

"
`;

snapshot[`molt 2`] = `
"  error: Missing argument(s): modules

"
`;

snapshot[`molt --help 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules

Options:

  -h, --help               - Show this help.                                            
  -v, --version            - Print version info.                                        
  --import-map   <file>    - Specify import map file                                    
  -w, --write              - Write changes to local files                               
  -c, --commit             - Commit changes to local git repository                     
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)
  --summary      <file>    - Write a summary of changes to file                         
  --report       <file>    - Write a report of changes to file                          

"
`;

snapshot[`molt --help 2`] = `""`;

snapshot[`molt --version 1`] = `
"123.456.789
"
`;

snapshot[`molt --version 2`] = `
"Fetching version info
"
`;

snapshot[`molt not_exist.ts 1`] = `""`;

snapshot[`molt not_exist.ts 2`] = `
'❌ path does not exist: "not_exist.ts"
'
`;

snapshot[`molt test/fixtures/import-map/deno.json 1`] = `""`;

snapshot[`molt test/fixtures/import-map/deno.json 2`] = `
'❌ file must be javascript or typescript: "test/fixtures/import-map/deno.json"
'
`;

snapshot[`molt test/fixtures/direct-import/mod.ts 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/import-map/mod.ts 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/import-map/lib.ts 0.200.0
  test/fixtures/import-map/deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/import-map/deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  test/fixtures/import-map/deno.json 1.0.0
"
`;

snapshot[`molt test/fixtures/import-map/mod.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/deno.json 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/import-map/lib.ts 0.200.0
  test/fixtures/import-map/deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/import-map/deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  test/fixtures/import-map/deno.json 1.0.0
"
`;

snapshot[`molt test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/deno.json 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/import-map/mod.ts --import-map not_exist.json 1`] = `""`;

snapshot[`molt test/fixtures/import-map/mod.ts --import-map not_exist.json 2`] = `
"Checking for updates
The import map file:///home/shun/molt/not_exist.json is not found.
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --write 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

💾 test/fixtures/direct-import/lib.ts
💾 test/fixtures/direct-import/mod.ts
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --write 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --write --summary title.txt --report body.md 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

💾 test/fixtures/direct-import/lib.ts
💾 test/fixtures/direct-import/mod.ts

📄 title.txt
📄 body.md
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --write --summary title.txt --report body.md 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --prefix :package: 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📝 :package: bump deno.land/std from 0.200.0 to 123.456.789
📝 :package: bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 :package: bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --prefix :package: 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --pre-commit=fmt --post-commit=lint 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task lint...

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task lint...

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task lint...
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --pre-commit=fmt --post-commit=lint 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --summary title.txt --report body.md 1`] = `
"💡 Found updates:

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789

📄 title.txt
📄 body.md
"
`;

snapshot[`molt test/fixtures/direct-import/mod.ts --commit --summary title.txt --report body.md 2`] = `
"Checking for updates
"
`;
